# img-hub-backend

./: .gitignore  API.md  Cargo.toml  Dockerfile  build.sh  docker-compose.yml
src/: albums.rs  database.rs  datebase.rs  main.rs  models.rs  pic.rs  response.rs
src/routes/: albums.rs  mod.rs  upload.rs
