[package]
name = "img-hub-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket-multipart-form-data = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["fs"] }
image = "0.24"
imageproc = "0.23"
kamadak-exif = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.mongodb]
version = "3.3.0"

